# largecopy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-local.bat  build.bat
.github/workflows/: ci.yml  release.yml
scoop/: largecopy.json
src/: args.cpp  args.h  buffer_pool.cpp  buffer_pool.h  common.h  console.cpp  console.h  detect.cpp  detect.h  engine.cpp  engine.h  hasher.cpp  hasher.h  ledger.cpp  ledger.h  main.cpp  netstats.cpp  netstats.h  privilege.cpp  privilege.h  smb.cpp  smb.h  wan.cpp  wan.h
tests/: e2e.ps1  repro_perf.ps1
winget/: yoogie27.largecopy.installer.yaml  yoogie27.largecopy.locale.en-US.yaml  yoogie27.largecopy.yaml
